# Runtime

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ce_engine  data.tcf  docs.md  startup.as  tmp.cpp
.github/workflows/: cmake-single-platform.yml
assets/: Gameinfo.txt
assets/shaders/Compiled/SPIRV/: solidcolour.vert.spv  standard_fragment.frag.spv  standard_vertex.vert.spv
include/engine/: bootstrap.hpp  core.hpp  engine.hpp  gameinfo.hpp  instance.hpp  platforms.hpp  renderer.hpp  renderers.hpp  settings.hpp  state.hpp  version.hpp
include/engine/assets/: fonts.hpp  textures.hpp
include/engine/bootstrap/: engine.hpp  instance.hpp
include/engine/common/: bootstrap.hpp  events.hpp  fullscreen.hpp  gameinfo.hpp  gdat_has.hpp  ini.hpp  input.hpp  renderer_name_2_string.hpp  sdl_events.hpp  shutdown.hpp  tracelog.hpp  vfs.hpp  vfs_stl.hpp
include/engine/common/core/: event_bus.hpp  event_bus.inl  game_state.hpp
include/engine/common/fs/: vfs.hpp  vfs_stl.hpp
include/engine/common/misc/: gameinfo.hpp  renderer_name_2_string.hpp
include/engine/input/: keyboard.hpp  mouse.hpp
include/engine/renderers/: opengl.hpp  sdl_gpu_renderer.hpp  software.hpp  software_renderer.hpp  vulkan.hpp
include/engine/renderers/shaders/: positioncolor_frag_spv.h  positioncolor_vert_spv.h  shader_frag_spv.h  shader_vert_spv.h  solidcolour_frag_spv.h  solidcolour_vert_spv.h  standard_fragment_frag_spv.h  standard_vertex_vert_spv.h
include/engine/scripting/: angelscript.hpp  luau.hpp
include/engine/ui/: debug_window.hpp  utils.hpp
shaders/: readme.md  shader.frag  shader.vert  shader.vert.spv  shader_frag_spv.h  shader_vert_spv.h  standard_fragment.frag  standard_vertex.vert
source/: main.cpp
source/engine/: ce_main.cpp  engine.cpp  instance.cpp  renderer.cpp  settings.cpp
source/engine/Input/: keyboard.cpp
source/engine/assets/: fonts.cpp  textures.cpp
source/engine/bootstrap/: bootstrap.cpp  bootstrap_assets.cpp  bootstrap_game_setup.cpp  bootstrap_video.cpp
source/engine/bootstrap/engine/: bootstrap_gameinfo.cpp
source/engine/common/: error_box.cpp  events.cpp  fullscreen.cpp  gdata_has.cpp  ini.cpp  renderer_name_2_string.cpp  sdl_events.cpp  shutdown.cpp  tcf.cpp  tracelog.cpp  vfs.cpp
source/engine/common/core/: event_bus.cpp  game_state.cpp
source/engine/common/fs/: ini.cpp  tcf.cpp  vfs.cpp
source/engine/common/misc/: error_box.cpp  gdat_has.cpp  renderer_name_2_string.cpp
source/engine/input/: keyboard.cpp  mouse.cpp
source/engine/renderers/: renderer.cpp  sdl_gpu_create_gpu_device.cpp  utils.cpp  vulkan.cpp
source/engine/renderers/opengl/: opengl.cpp  utils.cpp
source/engine/renderers/sdl_gpu/: sdl_gpu_create_gpu_device.cpp  sdl_gpu_imgui.cpp  sdl_gpu_renderer.cpp  sdl_gpu_renderer_utils.cpp
source/engine/renderers/software/: software.cpp  software_create_gpu_device.cpp  software_renderer.cpp
source/engine/scripting/: core.cpp  events.cpp  utils.cpp
source/engine/scripting/luau/: core.cpp
source/engine/scripting/wrappers/: assets.cpp  input.cpp  instance.cpp
source/engine/ui/: debug_window.cpp  utils.cpp
source/renderers/: vulkan.cpp
test_bld/: CMakeCache.txt  Makefile  cmake_install.cmake  data.tcf
